--- a/src/Lykke.Job.PayTelegramReporter.DomainServices/MessageTemplates.resx
+++ b/src/Lykke.Job.PayTelegramReporter.DomainServices/MessageTemplates.resx
@@ -120,16 +120,24 @@
   <data name="Empty" xml:space="preserve">
     <value>empty</value>
   </data>
+  <data name="KycRequiredText" xml:space="preserve">
+    <value>Notice: *KYC IS REQUIRED.*
+</value>
+  </data>
   <data name="PaymentCompleted" xml:space="preserve">
-    <value>Payment is completed.
-Destination wallet is {0}.
-Source wallets are {1}.
-Paid amount is {2} {3}.</value>
+    <value>*Payment is completed.*
+Merchant: {0}.
+{1}Destination wallet: {2}.
+Source wallets: {3}.
+Paid amount: {4} {5}.
+PaymentRequestId: {6}.</value>
   </data>
   <data name="RefundRequired" xml:space="preserve">
-    <value>Refund is required.
-Destination wallet is {0}.
-Source wallets are {1}.
-Paid amount is {2} {3}.</value>
+    <value>*Refund is required.*
+Merchant: {0}.
+{1}Destination wallet: {2}.
+Source wallets: {3}.
+Paid amount: {4} {5} (expected {6} {5}).
+PaymentRequestId: {7}.</value>
   </data>
 </root>
